--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,30 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+}
+
+.frame {
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.frame .framein {
+  background: linear-gradient(
+    180deg,
+    rgb(0, 17, 7.8) 0%,
+    rgb(9, 58, 62) 0.01%,
+    rgb(58, 175, 185) 36.46%,
+    rgb(100, 233, 238) 67.71%,
+    rgba(74, 143, 231, 0) 100%
+  );
+  background-color: rgba(255, 255, 255, 1);
 }
