--- a/app/globals.css
+++ b/app/globals.css
@@ -27,10 +27,10 @@ body {
 }
 
 .frame {
-  background-color: rgba(255, 255, 255, 1);
+  /* background-color: rgba(255, 255, 255, 1); */
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .frame .framein {
