--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,23 @@ body {
     )
     rgb(var(--background-start-rgb)); */
 }
+
+@keyframes gradient {
+  0% {
+      background-position: 0% 50%;
+  }
+  50% {
+      background-position: 100% 50%;
+  }
+  100% {
+      background-position: 0% 50%;
+  }
+}
+
+
+.bg-anim-gradient {
+      background: linear-gradient(45deg, #5757D9 0%, #21D9F7 100%);
+      background-size: 400% 400%;
+      animation: gradient 25s ease infinite;
+}
+
